don't pool SvxFieldItem, tdf#92773

In documents with many different hyperlinks pooling them is incredibly
slow. I doubt that in most cases the hyperlinks are the same so let us
just not pool them.

Change-Id: I2387aee57ef0ab3183d9cc3486ddbf8ca2883e0b